Wed Feb  5 14:41:56 2014  Koichi Sasada  <ko1@atdot.net>

	* vsnprintf.c: remove duplicated def of `UNINITIALIZED_VAR()'.

Wed Feb  5 14:40:16 2014  Koichi Sasada  <ko1@atdot.net>

	* ext/objspace/objspace_dump.c (dump_object): use STR_SHARED_P()
	  instead of removed STR_NOCAPA_P() macro.

Wed Feb  5 13:51:33 2014  Koichi Sasada  <ko1@atdot.net>

	* internal.h, vm_core.h: move LIKELY/UNLIKELY/UNINITIALIZED_VAR()
	  macros from vm_core.h to internal.h.

	* string.c: remove dependency to "vm_core.h".

	* common.mk: ditto.

Wed Feb  5 13:29:01 2014  Koichi Sasada  <ko1@atdot.net>

	* string.c (rb_str_free): use FL_TEST(str, STR_SHARED) directly
	  because str is not embed.

	* string.c (str_replace): remove `FL_SET(str, STR_SHARED)' line
	  because STR_SET_SHARED() set STR_SHARED.

Wed Feb  5 13:18:08 2014  Koichi Sasada  <ko1@atdot.net>

	* internal.h: remove macros STR_NOCAPA and STR_NOCAPA_P().

	* string.c (rb_str_resize): remove `STR_SET_NOEMBED(str)' because
	  str_make_independent_expand() set NOEMBED flag.

	* string.c (rb_str_resize): remove `STR_NOCAPA_P(str)' check because
	  `str' is independent (not shared).

Wed Feb  5 12:54:25 2014  Koichi Sasada  <ko1@atdot.net>

	* string.c: refactoring, especially about string flags.

	* string.c (STR_UNSET_NOCAPA): removed.
	  Use FL_UNSET() with STR_SHARED.

	* string.c (rb_str_capacity): check STR_SHARED directly
	  because it is not a embed string.

	* string.c (rb_str_modify_expand): ditto.

	* string.c (rb_str_shared_replace): use STR_SET_SHARED().

	* string.c (str_make_independent_expand): remove STR_UNSET_NOCAPA()
	  because `str' is not shared string.

Wed Feb  5 12:11:04 2014  Koichi Sasada  <ko1@atdot.net>

	* string.c (RESIZE_CAPA): should not resize shared string.

Wed Feb  5 11:46:42 2014  Koichi Sasada  <ko1@atdot.net>

	* gc.c (gc_mark_children): STR_ASSOC is no longer available.
	  Reported by @nagachika.
	  http://d.hatena.ne.jp/nagachika/20140204
